test/invalid_mismatch.spt
R"*(
<HTML>
  <DIV>
  Mismatched closing tag
  </DIVV>
</HTML>
)*"_html; 